# switch_systems

./: CMakeLists.txt  README.md
notebooks/: fractional_entropy_loss.ipynb  integral_entropy_loss.ipynb  modulus compute.ipynb
src/: CMakeLists.txt  label.cpp  label.h  utils.cpp  utils.h  wire.cpp  wire.h
test/: CMakeLists.txt  test_label.cpp  test_wire.cpp
verify/: CMakeLists.txt  verify_label.cpp
